[package]
name = "uppercut"
version = "0.2.0"
authors = ["sergey-melnychuk"]
edition = "2018"
description = "Small and simple actor model implementation"
license = "MIT"
documentation = "https://github.com/sergey-melnychuk/uppercut"
homepage = "https://github.com/sergey-melnychuk/uppercut"
repository = "https://github.com/sergey-melnychuk/uppercut"

[dependencies]
core_affinity = "0.5.10"
crossbeam-channel = "0.4.2"
parsed = "0.1.4"
bytes = "0.5.6"

[dependencies.mio]
version = "0.7.0"
features = ["os-poll", "tcp"]

[dev-dependencies]
bencher = "0.1.5"
num_cpus = "1.13.0"

[[bench]]
name = "workload"
harness = false

[[bench]]
name = "mailbox"
harness = false
