[package]
name = "uppercut"
version = "0.3.0"
authors = ["sergey-melnychuk"]
edition = "2018"
description = "Small and simple actor model implementation"
license = "MIT"
documentation = "https://github.com/sergey-melnychuk/uppercut"
homepage = "https://github.com/sergey-melnychuk/uppercut"
repository = "https://github.com/sergey-melnychuk/uppercut"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]
core_affinity = "0.5.10"
crossbeam-channel = "0.4.4"
parsed = "0.1.4"
bytes = "0.6.0"
log = "0.4"
get_if_addrs = "0.5"

[dependencies.mio]
version = "0.7.0"
features = ["os-poll", "tcp"]

[dev-dependencies]
bencher = "0.1.5"
num_cpus = "1.13.0"
clap = "2.33.1"
rand = "0.7.3"
chrono = "0.4.19"
env_logger = "0.8.2"

[[bench]]
name = "workload"
harness = false

[[bench]]
name = "mailbox"
harness = false
